codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Uxarion to assess a target                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
