codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_report_requires_thread_id.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
■ Reports are unavailable until this session has a thread id.
