codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Uxarion to assess a target                                                      "
"                                                                                "
"  Fast on                                                                       "
